--- a/ipydra.cfg
+++ b/ipydra.cfg
@@ -2,10 +2,10 @@
 
 [ipydra]
 # URI for DB connection
-DB_URI = sqlite:///ipydra.db
+DB_URI = sqlite:/
 # Base url for notebook server urls
-BASE_URL = http://localhost
+BASE_URL = http://tbenthompson.com
 # Root of user workspace directory tree
 DATA_DIR = ~/.ipydra
 # Initial data to copy to user's notebook folder
-#INITDATA_DIR = ~/path_to_initial_data
+#INITDATA_DIR = ~/ipydra_initial_data
