--- a/ipydra.cfg
+++ b/ipydra.cfg
@@ -8,4 +8,4 @@ BASE_URL = http://tbenthompson.com
 # Root of user workspace directory tree
 DATA_DIR = ~/.ipydra
 # Initial data to copy to user's notebook folder
-#INITDATA_DIR = ~/ipydra_initial_data
+INITDATA_DIR = ~/ipydra_initial_data
