--- a/ipydra.cfg
+++ b/ipydra.cfg
@@ -6,6 +6,6 @@ DB_URI = sqlite:////home/remote/ipydra/ipydra.db
 # Base url for notebook server urls
 BASE_URL = http://tbenthompson.com
 # Root of user workspace directory tree
-DATA_DIR = ~/.ipydra
+DATA_DIR = /home/remote/.ipydra
 # Initial data to copy to user's notebook folder
-INITDATA_DIR = ~/ipydra_initial_data
+INITDATA_DIR = /home/remote/ipydra_initial_data
